--- a/lora-ifroglab/Cargo.toml
+++ b/lora-ifroglab/Cargo.toml
@@ -1,28 +1,25 @@
 [package]
 name = "lora-ifroglab"
-version = "0.0.17"
+version = "0.1.0"
 authors = ["Chien-Hong Chan"]
 edition = "2021"
 description = "A simple LoRa network server implementation for Sylvia-IoT using iFrogLab LoRa USB dongle devices."
 readme = "README.md"
 
 [dependencies]
-actix-cors = "0.6.4"
-actix-files = "0.6.2"
-actix-http = "3.4.0"
-actix-web = { version = "4.4.0", default-features = false, features = ["rustls-0_21"] }
-async-trait = "0.1.73"
-chrono = { version = "0.4.30" }
-clap = { version = "4.4.3", default-features = false, features = ["std", "help", "usage", "error-context"] }
-general-mq = "0.0.33"
+axum = "0.7.5"
+axum-server = { version = "0.6.0", features = ["tls-rustls"] }
+async-trait = "0.1.80"
+chrono = { version = "0.4.38" }
+clap = { version = "4.5.4", default-features = false, features = ["std", "help", "usage", "error-context"] }
+general-mq = "0.1.1"
 hex = "0.4.3"
 json5 = "0.4.1"
-log = "0.4.20"
-rustls = "0.21.7"
-rustls-pemfile = "1.0.3"
-serde = { version = "1.0.188", features = ["derive"] }
-serde_json = "1.0.107"
-sylvia-iot-sdk = "0.0.33"
-tokio = { version = "1.32.0", features = ["io-util", "macros", "rt-multi-thread", "time"] }
+log = "0.4.21"
+serde = { version = "1.0.202", features = ["derive"] }
+serde_json = "1.0.117"
+sylvia-iot-sdk = "0.1.1"
+tokio = { version = "1.37.0", features = ["io-util", "macros", "rt-multi-thread", "time"] }
 tokio-serial = "5.4.4"
-url = "2.4.1"
+tower-http = { version = "0.5.2", default-features = false, features = ["cors", "normalize-path", "timeout"] }
+url = "2.5.0"
