--- a/app-demo/Cargo.toml
+++ b/app-demo/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "app-demo"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Chien-Hong Chan"]
 edition = "2021"
 description = "A simple application server for Sylvia-IoT demo."
@@ -8,17 +8,32 @@ readme = "README.md"
 
 [dependencies]
 axum = "0.7.5"
-axum-server = { version = "0.6.0", features = ["tls-rustls"] }
-async-trait = "0.1.80"
+axum-server = { version = "0.7.1", features = ["tls-rustls"] }
+async-trait = "0.1.81"
 chrono = { version = "0.4.38" }
-clap = { version = "4.5.4", default-features = false, features = ["std", "help", "usage", "error-context"] }
-general-mq = "0.1.3"
+clap = { version = "4.5.16", default-features = false, features = [
+    "std",
+    "help",
+    "usage",
+    "error-context",
+] }
+general-mq = "0.1.10"
 hex = "0.4.3"
 json5 = "0.4.1"
-log = "0.4.21"
-serde = { version = "1.0.203", features = ["derive"] }
-serde_json = "1.0.117"
-sylvia-iot-sdk = "0.1.3"
-tokio = { version = "1.37.0", features = ["io-util", "macros", "rt-multi-thread", "time"] }
-tower-http = { version = "0.5.2", default-features = false, features = ["cors", "normalize-path", "timeout"] }
+log = "0.4.22"
+rustls = "0.23.12"
+serde = { version = "1.0.208", features = ["derive"] }
+serde_json = "1.0.125"
+sylvia-iot-sdk = "0.1.10"
+tokio = { version = "1.39.2", features = [
+    "io-util",
+    "macros",
+    "rt-multi-thread",
+    "time",
+] }
+tower-http = { version = "0.5.2", default-features = false, features = [
+    "cors",
+    "normalize-path",
+    "timeout",
+] }
 url = "2.5.0"
