--- a/app-demo/Cargo.toml
+++ b/app-demo/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "app-demo"
-version = "0.3.7"
+version = "0.3.8"
 authors = ["Chien-Hong Chan"]
 edition = "2024"
 description = "A simple application server for Sylvia-IoT demo."
 readme = "README.md"
 
 [dependencies]
-axum = "0.8.6"
-axum-server = { version = "0.7.2", features = ["tls-rustls"] }
+axum = "0.8.7"
+axum-server = { version = "0.8.0", features = ["tls-rustls"] }
 async-trait = "0.1.89"
-chrono = { version = "0.4.42" }
-clap = { version = "4.5.48", default-features = false, features = [
+chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
+clap = { version = "4.5.53", default-features = false, features = [
     "std",
     "help",
     "usage",
@@ -19,19 +19,19 @@ clap = { version = "4.5.48", default-features = false, features = [
 ] }
 general-mq = "0.3.12"
 hex = "0.4.3"
-json5 = "0.4.1"
-log = "0.4.28"
-rustls = "0.23.32"
+json5 = "1.3.0"
+log = "0.4.29"
+rustls = "0.23.35"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 sylvia-iot-sdk = "0.3.12"
-tokio = { version = "1.47.1", features = [
+tokio = { version = "1.48.0", features = [
     "io-util",
     "macros",
     "rt-multi-thread",
     "time",
 ] }
-tower-http = { version = "0.6.6", default-features = false, features = [
+tower-http = { version = "0.6.8", default-features = false, features = [
     "cors",
     "normalize-path",
     "timeout",
