--- a/dev-demo/Cargo.toml
+++ b/dev-demo/Cargo.toml
@@ -1,14 +1,10 @@
 [package]
-name = "lora-ifroglab"
+name = "dev-demo"
 version = "0.3.9"
 authors = ["Chien-Hong Chan"]
 edition = "2024"
-description = "A simple LoRa network server implementation for Sylvia-IoT using iFrogLab LoRa USB dongle devices."
-readme = "README.md"
 
 [dependencies]
-axum = "0.8.7"
-axum-server = { version = "0.8.0", features = ["tls-rustls"] }
 async-trait = "0.1.89"
 chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
 clap = { version = "4.5.53", default-features = false, features = [
@@ -17,11 +13,10 @@ clap = { version = "4.5.53", default-features = false, features = [
     "usage",
     "error-context",
 ] }
-general-mq = "0.3.12"
 hex = "0.4.3"
+i2cdev = "0.6.2"
 json5 = "1.3.0"
 log = "0.4.29"
-rustls = "0.23.35"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 sylvia-iot-sdk = "0.3.12"
@@ -32,9 +27,3 @@ tokio = { version = "1.48.0", features = [
     "time",
 ] }
 tokio-serial = "5.4.5"
-tower-http = { version = "0.6.8", default-features = false, features = [
-    "cors",
-    "normalize-path",
-    "timeout",
-] }
-url = "2.5.7"
